[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["command-line-utilities"]
description = "Tools to print stack usage information emitted by LLVM in human readable format"
documentation = "https://docs.rs/stack-sizes"
edition = "2018"
keywords = ["stack", "usage", "analysis"]
license = "MIT OR Apache-2.0"
name = "stack-sizes"
readme = "README.md"
repository = "https://github.com/japaric/stack-sizes"
version = "0.5.0"

[[bin]]
name = "stack-sizes"
required-features = ["tools"]

[[bin]]
name = "cargo-stack-sizes"
required-features = ["tools"]

[dependencies]
anyhow = "1"
byteorder = "1.2.3"
leb128 = "0.2.3"
xmas-elf = "0.6.2"

[dependencies.cargo-project]
version = "0.3.0"
optional = true

[dependencies.clap]
version = "2.32.0"
optional = true

[dependencies.filetime]
version = "0.2.4"
optional = true

[dependencies.rustc-demangle]
version = "0.1.8"
optional = true

[dependencies.rustc_version]
version = "0.2.3"
optional = true

[dependencies.walkdir]
version = "2.2.7"
optional = true

[features]
default = ["tools"]
tools = ["cargo-project", "clap", "filetime", "rustc-demangle", "rustc_version", "walkdir"]
