[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["command-line-utilities"]
description = "Tools to print stack usage information emitted by LLVM in human readable format"
documentation = "https://docs.rs/stack-sizes"
edition = "2018"
keywords = ["stack", "usage", "analysis"]
license = "MIT OR Apache-2.0"
name = "stack-sizes"
readme = "README.md"
repository = "https://github.com/japaric/stack-sizes"
version = "0.5.0"

[dependencies]
anyhow = "1"
byteorder = "1.2.3"
leb128 = "0.2.3"
xmas-elf = "0.6.2"
